adding update user endpoint
