# swagger.yaml
@@ -78,6 +78,31 @@ definitions:
     - confirm_password
     type: object
     x-go-package: github.com/FacuBar/bookstore_users-api/pkg/infraestructure/http/rest
+  requestUpdateUser:
+    properties:
+      confirm_password:
+        type: string
+        x-go-name: ConfirmPassword
+      email:
+        type: string
+        x-go-name: Email
+      first_name:
+        type: string
+        x-go-name: FirstName
+      last_name:
+        type: string
+        x-go-name: LastName
+      password:
+        type: string
+        x-go-name: Password
+      role:
+        type: string
+        x-go-name: Role
+      status:
+        type: string
+        x-go-name: Status
+    type: object
+    x-go-package: github.com/FacuBar/bookstore_users-api/pkg/infraestructure/http/rest
 info: {}
 paths:
   /users:
@@ -98,7 +123,7 @@ paths:
           $ref: '#/responses/genericError'
       tags:
       - users
-  /users/{id}:
+  /users/{user_id}:
     get:
       description: |-
         List information of a particular user
@@ -108,7 +133,7 @@ paths:
       - format: int64
         in: path
         minimum: 1
-        name: id
+        name: user_id
         required: true
         type: integer
         x-go-name: ID
@@ -124,6 +149,30 @@ paths:
         "401":
           $ref: '#/responses/genericError'
         "404":
+          $ref: '#/responses/genericError'
+        "500":
+          $ref: '#/responses/genericError'
+      tags:
+      - users
+    put:
+      description: Validates that the email and the passwords provided are valid for
+        a registered user
+      operationId: updateUser
+      parameters:
+      - example: '"Bearer {auth_token}"'
+        in: header
+        name: Authorization
+        type: string
+      - in: body
+        name: Body
+        schema:
+          $ref: '#/definitions/requestUpdateUser'
+      responses:
+        "200":
+          $ref: '#/responses/genericUser'
+        "400":
+          $ref: '#/responses/genericError'
+        "401":
           $ref: '#/responses/genericError'
         "500":
           $ref: '#/responses/genericError'
